be/feat: ElasticSearch 검색 쿼리 메서드 구현 및 기존 임시 API 메서드 삭제 (#73)